# sessak_back

./: .md  Dockerfile  pyproject.toml  requirements.txt
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
comments/: admin.py  models.py  serializers.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_comment_comment_num_remove_comment_post_and_more.py  0002_initial.py
config/: settings.py  urls.py
popularities/: admin.py  apps.py  models.py
popularities/migrations/: 0001_initial.py  0002_initial.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_image.py  0002_initial.py  0003_post_like_post.py  0004_alter_post_like_post.py  0005_remove_post_like_num_remove_post_like_post_and_more.py  0006_remove_post_comment_num_delete_like.py
users/: admin.py  models.py  serializers.py  social_login.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_username.py  0002_user_login_method.py  0003_alter_user_nickname.py  0003_remove_user_login_method_alter_user_email.py  0004_alter_user_nickname.py  0004_user_login_method.py
