[tool.poetry]
name = "sessak-back"
version = "0.1.0"
description = ""
authors = ["dozzzini <dozzzini@naver.com>"]
readme = "README.md"
packages = [{include = "sessak_back"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
